Added gitignore for .vagrant/ and node_modules/; troubleshooting for local provisioning; configuration of package.json and gruntfile

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "SFE Style Guide",
+  "name": "sfe-style-guide",
   "version": "0.1.0",
   "description": "Scottish Film Education Styleguide development tools",
   "repository": {
