--- a/ansible/provision.yml
+++ b/ansible/provision.yml
@@ -27,7 +27,7 @@
   roles:
        # only execute some if not a vagrant box, basically - server_name set in group_vars/
        # note: extra doublequotes round 'when' value due to colon for port confusing parser
-     - { role: git-clone, when: "server_name !== 'localhost:8080'" }
+     - { role: git-clone, when: "server_name != 'localhost:8080'" }
        # only execute some if we *are* a vagrant box
      - { role: nginx, when: "server_name == 'localhost:8080'" }
      - { role: nginx-config, when: "server_name == 'localhost:8080'" }
